add_executable(test_count_only test_count_only.cu)
add_executable(test_hybrid_search test_hybrid_search.cu)
add_executable(test_hash_map_comprehensive test_hash_map_comprehensive.cu)
add_executable(test_count_comprehensive test_count_comprehensive.cu)
add_executable(test_insert_comprehensive test_insert_comprehensive.cu)
add_executable(test_insert_performance test_insert_performance.cu)
add_executable(test_insert test_insert.cu)
add_executable(test_delete test_delete.cu)
add_executable(test_delete_optimized test_delete_optimized.cu)
add_executable(test_count_performance test_count_performance.cu)
add_executable(test_search_performance test_search_performance.cu)
add_executable(test_iterator test_iterator.cu)
add_executable(test_cuda_version test_cuda_version.cu)
add_executable(test_delete_performance test_delete_performance.cu)

